# chem-caption

./: .bumpversion.cfg  .cruft.json  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: api.rst  cli.rst  comparators.rst  conf.py  featurizers.rst  index.rst  installation.rst  molecules.rst  usage.rst
docs/source/_build/doctrees/: api.doctree  index.doctree  installation.doctree  usage.doctree
docs/source/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/source/_build/html/_modules/: index.html  typing.html
docs/source/_build/html/_modules/chemcaption/: molecules.html
docs/source/_build/html/_modules/chemcaption/featurize/: adaptor.html  base.html  bonds.html  comparator.html  composition.html  electronicity.html  miscellaneous.html  reaction.html  rules.html  spatial.html  stereochemistry.html  substructure.html  symmetry.html  text.html
docs/source/_build/html/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
export/: __init__.py  export.py  run_export.py
export/data/gnn/: MultipleFeaturizer.csv
export/data/llm/: MultipleFeaturizer.jsonl
src/: paper.md
src/chemcaption/: __init__.py  __main__.py  api.py  cli.py  featurizers.py  molecules.py  presets.py  version.py
src/chemcaption/export/: __init__.py  export.py  pre_export_tests.py  pre_test_export.py  test.py
src/chemcaption/featurize/: __init__.py  adaptor.py  base.py  bonds.py  comparator.py  composition.py  demo.py  electronicity.py  misc.py  miscellaneous.py  qce_optim.xyz  rdkit.py  reaction.py  rules.py  spatial.py  stereochemistry.py  substructure.py  symmetry.py  text.py  text_utils.py  utils.py  xtb.py
tests/: __init__.py  conftests.py  extract_failing_molecules.py  generate_data.py  scrape_info.py  scrape_pub_chem_info.py  test_featurizers.py  test_molecules.py  test_version.py
tests/data/: _bank.json  error_throwing_inchi.csv  error_throwing_smiles.csv  final_pubchem_response.csv  generated_data.csv  generated_data_.csv  merged_pubchem_response.csv  molecular_bank.csv  pubchem_response.csv
tests/data/legacy/: data_generation.py  error_throwing_inchi.csv  extract_failing_molecules.py  generate_comparator_data.py  generate_data.py  molecular_bank.json  parallelized_data_generation.py  scrape_pub_chem_info.py  trim_data.py
tests/featurize/: test_composition.py  test_featurize_adaptor.py  test_featurize_base.py  test_featurize_bonds.py  test_featurize_comparator.py  test_featurize_composition.py  test_featurize_electronicity.py  test_featurize_misc.py  test_featurize_miscellaneous.py  test_featurize_rules.py  test_featurize_spatial.py  test_featurize_stereochemistry.py  test_featurize_substructure.py  test_featurize_symmetry.py  test_featurize_text.py  text_featurize_base.py
tests/regression/data/: pubchem_response.csv
tests/regression/data/legacy/: _bank.json  data_generation.py  extract_failing_molecules.py  molecular_bank.json  parallelized_data_generation.py  scrape_pub_chem_info.py  trim_data.py
tests/regression/featurize/: __init__.py  test_featurize_adaptor.py  test_featurize_bonds.py  test_featurize_comparator.py  test_featurize_composition.py  test_featurize_miscellaneous.py  test_featurize_rules.py  test_featurize_spatial.py  test_featurize_stereochemistry.py  test_featurize_substructure.py  test_featurize_symmetry.py
