##########################
# Setup.py Configuration #
##########################
[metadata]
name = chemcaption
version = 0.0.1-dev
description = Caption molecules and materials for pretraining for neural networks 
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/chem-caption
download_url = https://github.com/kjappelbaum/chem-caption/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/chem-caption/issues
    Source Code = https://github.com/kjappelbaum/chem-caption

# Author information
author =
    Kevin Maik Jablonka
    Benedict Oshomah Emoekabu
author_email =
    mail@kjablonka.com
    emoekabuoshomah@gmail.com
maintainer =
    Kevin Maik Jablonka
    Benedict Oshomah Emoekabu
maintainer_email =
    mail@kjablonka.com
    emoekabuoshomah@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =

[options]
install_requires =
    pandas
    rdkit
    selfies
    tqdm
    typing_extensions
    networkx
    scipy
    givemeconformer @ git+https://github.com/kjappelbaum/givemeconformer.git
    pymatgen
    frozendict
    morfeus
    numpy
    collections
    functools

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    furo
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton
    sphinxcontrib-katex
    sphinx-click
symmetry =
    givemeconformer @ git+https://github.com/kjappelbaum/givemeconformer.git
    pymatgen
export =
    dask
    selfies
    fire
    jsonlines


[options.entry_points]
console_scripts =
    chemcaption = chemcaption.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = chemcaption
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/chemcaption
    .tox/*/lib/python*/site-packages/chemcaption

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    chemcaption
    tests
